sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:8: error: not found: value mem2
    mem2 = getValeur(gnome + 1)
    ^AlgGnomeSort:10: error: not found: value mem2
    if ((mem < mem2)) {
               ^AlgGnomeSort:12: error: not found: value mem2
      mem = mem2
            ^